# Nitor

./: CMakeLists.txt  LICENSE  README.md
include/: App.h  ArrayBuffer.h  Buffers.h  Camera.h  Gui.h  Image.h  Light.h  Material.h  Mesh.h  Model.h  Pointer.h  Scene.h  Shader.h  Structs.h  Texture.h  Transform.h  Vertex.h
include/glad/: glad.h
models/cube/: Cube.fbx
models/plane/: Plane.fbx
shaders/: ntr_debug_quad.fs  ntr_pbr.fs  ntr_pbr.vs  ntr_shadows_depth.fs  ntr_shadows_depth.gs  ntr_shadows_depth.vs  ntr_stencil.fs  ntr_stencil.vs
src/: App.cpp  ArrayBuffer.hpp  Buffers.cpp  Camera.cpp  Gui.cpp  Image.cpp  Material.cpp  Mesh.cpp  Model.cpp  Pointer.hpp  Scene.cpp  Shader.cpp  Structs.cpp  Texture.cpp  Transform.cpp  glad.c  main.cpp
